--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,9 @@
         <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles
             que se pueden hacer con ramas</p>
 
-        <p>Los blogs son la mejor de compartir información y tus ideas.
+            <blockquote class="imgur-embed-pub" lang="en" data-id="cK2pmw9"><a href="https://imgur.com/cK2pmw9">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+            
+            <p>Los blogs son la mejor de compartir información y tus ideas.
             Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
             Pero estadisticamente no lo eres... por ahora.
         </p>
